--- a/tethysapp/ts_converter/templates/ts_converter/home.html
+++ b/tethysapp/ts_converter/templates/ts_converter/home.html
@@ -17,9 +17,9 @@
 {% endblock %}
 
 {% block app_content %}
-  <h1>Welcome to Time Series Viewer</h1>
+  <h1>Welcome to Time Series Converter</h1>
 
-     <h1>{{name}}   </h1>
+     <h1>   </h1>
 
 
 
