--- a/tethysapp/ts_converter/templates/ts_converter/home.html
+++ b/tethysapp/ts_converter/templates/ts_converter/home.html
@@ -2,41 +2,42 @@
 {% load tethys_gizmos %}
 
 {% block app_navigation_items %}
+
 <form method="post">
+
 {% csrf_token %}
+
 {% gizmo text_input text_input_options %}
+
+
 <input type="submit" name="url_submit" class="btn btn-default">
 
+
+
 {% gizmo select_input select_interval %}
-
-
 {% gizmo select_input select_stat %}
 
 
+<a href="{% url 'ts_converter:View_R_Code' %} " class = "btn btn-default">View R Code</a>
 </form>
 {% endblock %}
 
 {% block app_content %}
   <h1>Welcome to Time Series Converter</h1>
 
-     <h1>   </h1>
-
-
-
-
+      <h1>{{name}}  </h1>
 {% gizmo highcharts_plot_view timeseries_plot%}
+
+
 {% gizmo highcharts_plot_view plot%}
 
 
-
-
-
-
-
-
+<input type="submit" name="download_R" class="btn btn-default">
 
 {% endblock %}
+
 {% block app_actions %}
+
   <a href="" class="btn btn-default">Next</a>
   <a href="" class="btn btn-default">Back</a>
   
