--- a/tethysapp/ts_converter/templates/ts_converter/home.html
+++ b/tethysapp/ts_converter/templates/ts_converter/home.html
@@ -11,12 +11,14 @@
 
 {% gizmo text_input text_input_options %}
 {% gizmo button add_ts %}
+{% gizmo button clear_all_ts %}
+
 
 
 
 {% gizmo select_input select_interval %}
 {% gizmo select_input select_stat %}
-<input type="submit" name="url_submit" class="btn btn-default">
+
 
 <p></p>
 <a href="{% url 'ts_converter:View_R_Code' %} " class = "btn btn-default">View R Code</a>
