--- a/tethysapp/ts_converter/public/css/main.css
+++ b/tethysapp/ts_converter/public/css/main.css
@@ -1,7 +1,13 @@
 #url_name {
-width:500px;
+width:700px;
 }
-
-
-
+#url_name.form-control{
+    width:1000px;
+}
+#input_group{
+    width:100px;
+}
+#inner-app-content{
+    with:1000px;
+}
 
