Graph should now work with Tethys 1.2

--- a/tethysapp/ts_converter/templates/ts_converter/base.html
+++ b/tethysapp/ts_converter/templates/ts_converter/base.html
@@ -11,7 +11,7 @@
 
 {% block app_icon %}
   {# The path you provided in your app.py is accessible through the tethys_app.icon context variable #}
-  <img src="{% static tethys_app.icon %}">
+  <img src="{% static 'ts_converter/images/icon.gif' %}">
 {% endblock %}
 
 {# The name you provided in your app.py is accessible through the tethys_app.name context variable #}
