--- a/tethysapp/ts_converter/templates/ts_converter/home.html
+++ b/tethysapp/ts_converter/templates/ts_converter/home.html
@@ -46,7 +46,7 @@
 {% csrf_token %}
 
 {% gizmo button graph %}
-{% gizmo highcharts_plot_view plot%}
+{% gizmo plot_view plot%}
 
 
 <div id = "info">
