Changed source to src and id to res_id. Began to add support for zipped water ml files

--- a/tethysapp/ts_converter/templates/ts_converter/home.html
+++ b/tethysapp/ts_converter/templates/ts_converter/home.html
@@ -46,7 +46,7 @@
 {% csrf_token %}
 
 {% gizmo button graph %}
-{% gizmo plot_view plot%}
+{% gizmo plot_view timeseries_plot%}
 
 
 <div id = "info">
