viewer - support multiple time series again

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -17,7 +17,7 @@
 
 
 {% block app_content %}
- <h1>Welcome to HydroScriptR</h1>
+ <h1>Welcome to CUAHSI time series viewer</h1>
 {%gizmo button water_ml%}{%gizmo button hydroshare%}
 <p></p>
 {%if show_hydroshare = True%}
