--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -5,21 +5,12 @@
 CUAHSI Time Series Viewer
 {%endblock%}
 
-
-<form method="post">
-
-{% csrf_token %}
-
-
-
-
 {% block app_content %}
-
-{% csrf_token %}
 
 <div id="ts-chart" class="highcharts-plot"></div>
 
-<table border="1" style= "font-size:20px;width:80%">
+<table id="stats-table" border="1" style= "font-size:20px;width:80%">
+    <thead>
   <tr align = 'center'>
       <th align = 'center'>Site Name</th>
       <th align = 'center'>Value Count</th>
@@ -27,15 +18,8 @@ CUAHSI Time Series Viewer
       <th align = 'center'>Median</th>
       <th align = 'center'>Standard Deviation</th>
   </tr>
-    {%for stat in stat_data%}
-  <tr class ="red">
-      <td>{{stat.site_name}}</td>
-      <td align ='right'>{{stat.count}}</td>
-      <td align ='right'>{{stat.mean}}</td>
-      <td align ='right'>{{stat.median}}</td>
-      <td align ='right'>{{stat.stdev}}</td>
-  </tr>
-    {%endfor%}
+    </thead>
+    <tbody></tbody>
 </table>
 
 
@@ -43,35 +27,18 @@ CUAHSI Time Series Viewer
 {% endblock %}
 <h1>Statistics</h1>
 {% block app_navigation_items %}
-<!--
-<table border="1" style="width:100%">
-  <tr >
-      <th >Site Name</th>
-      <th>Variable</th>
-      <th>Organization</th>
 
-  </tr>
-    {%for meta in meta_data%}
-  <tr class ="red">
-      <td>{{meta.site_name}}</td>
-      <td>{{meta.variable_name}}</td>
-      <td>{{meta.organization}}</td>
-
-  </tr>
-    {%endfor%}
-</table>
--->
 <h1>Metadata</h1>
-{%for meta in meta_data%}
+
     <ul style="font-size:20px">
-        <li>{{meta.site_name}}</li>
+        <li id="metadata-site-name"></li>
         <ul style="font-size:20px">
-            <li>{{meta.variable_name}}</li>
-            <li>{{meta.organization}}</li>
+            <li id="metadata-variable-name"></li>
+            <li id="metadata-organization"></li>
         </ul>
     </ul>
 <hr>
-{%endfor%}
+
 
 <hr>
 {% endblock %}
@@ -80,9 +47,9 @@ CUAHSI Time Series Viewer
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'timeseries_viewer/vendor/highcharts/highcharts.js' %}" type="text/javascript"></script>
-<script src="{% static 'timeseries_viewer/vendor/highcharts/exporting.js' %}" type="text/javascript"></script>
-<script src="{% static 'timeseries_viewer/vendor/highcharts/export-csv.js' %}" type="text/javascript"></script>
+<script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts.js"></script>
+<script src="/static/tethys_gizmos/vendor/highcharts/js/highcharts-more.js"></script>
+<script src="/static/tethys_gizmos/vendor/highcharts/js/modules/exporting.js"></script>
 <script src="{% static 'timeseries_viewer/js/main.js' %}"></script>
   {{ block.super }}
 {% endblock %}
