Changed legend size and added more data to metadata

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -9,7 +9,7 @@ CUAHSI Time Series Viewer
 
 <div id="ts-chart" class="highcharts-plot"></div>
 
-<table id="stats-table" border="1" style= "font-size:20px;width:80%">
+<table id="stats-table" border="1" style= "font-size:17px;width:80%">
     <thead>
   <tr align = 'center'>
       <th align = 'center'>Site Name</th>
@@ -35,6 +35,8 @@ CUAHSI Time Series Viewer
         <ul style="font-size:20px">
             <li id="metadata-variable-name"></li>
             <li id="metadata-organization"></li>
+            <li id="metadata-quality"></li>
+            <li id="metadata-method"></li>
         </ul>
     </ul>
 <hr>
