--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -9,7 +9,7 @@ CUAHSI Time Series Viewer
 
 <div id="ts-chart" class="highcharts-plot"></div>
 
-<table id="stats-table" border="1" style= "font-size:17px;width:80%">
+<table id="stats-table">
     <thead>
   <tr align = 'center'>
       <th align = 'center'>Site Name</th>
