more specific error messages

--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -7,6 +7,7 @@ CUAHSI Time Series Viewer
 
 {% block app_content %}
 
+<div id="error-message"></div>
 <div id="ts-chart" class="highcharts-plot"></div>
 
 <table id="stats-table">
