--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -10,7 +10,7 @@ CUAHSI Time Series Viewer
 <div id="error-message"></div>
 <div id="ts-chart" class="highcharts-plot"></div>
 
-<table id="stats-table">
+<table id="stats-table" style="width:100%">
     <thead>
   <tr>
       <th>Site Name</th>
@@ -29,7 +29,7 @@ CUAHSI Time Series Viewer
 <h1>Statistics</h1>
 {% block app_navigation_items %}
 
-<h1>Metadata</h1>
+
     <ul id="metadata-list">
         <li id="metadata-loading">Loading...</li>
     </ul>
