change position of reset zoom button don't show units if they are not specified adjust initial chart height according to web page height

--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -36,6 +36,13 @@ width:700px;
     margin-right: 20px;
 }
 
+#ts-chart {
+
+}
+
+#app-content {
+}
+
 #app-header .tethys-app-header .icon-wrapper img
 {
     height:50px;
