Chart refresehd when nav panel closes

--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -88,3 +88,6 @@ margin:10px !important;
 #app-header .tethys-app-header .icon-wrapper {
     padding: 0px !important;
 }
+#title {
+    color: #ff2283;
+}
