Added BYU logo to main message box

--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -87,3 +87,19 @@ margin:10px !important;
 #title {
     color: #ff2283;
 }
+
+#byu-logo-container {
+    float: left;
+    position: absolute;
+    bottom: 8px;
+}
+#byu-logo-container img {
+    float: left;
+    height: 50px;
+    width: 50px;
+}
+#byu-logo-container span {
+    position: relative;
+    top: 25px;
+    margin-left: 10px;
+}
