--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -31,6 +31,9 @@ CUAHSI Time Series Viewer
                 </div>
             </div>
             <div class="modal-footer">
+                 <div id="byu-logo-container">
+                    <img src="{% static 'timeseries_viewer/images/byu-medallion.png' %}"/><span><i>Developed at the BYU Hydroinformatics Lab</i></span>
+                </div>
                 <button type="button" class="btn btn-default" id="close-popup" data-dismiss="modal">Close</button>
             </div>
         </div>
