--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -27,7 +27,7 @@ CUAHSI Time Series Viewer
                         <h6>3. Launch the time series viewer</h6>
                         <p>In your workspace, select the time series for visualization, choose Time series viewer, and launch tool.</p>
                         <div id="extra-buttons">
-                            <a class="btn btn-default" href="http://github.com/jirikadlec2/snow-inspector" target="_blank">More Info</a>
+                            <a class="btn btn-default" href="https://github.com/mmbayles/timeseries_viewer" target="_blank">More Info</a>
                             <a class="btn btn-default" href='http://bcc-hiswebclient.azurewebsites.net'>Go to CUAHSI HydroClient</a>
                         </div>
                     </ol>
