Made metadata collapsible

--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -116,3 +116,22 @@ margin:10px !important;
     top: 25px;
     margin-left: 10px;
 }
+
+
+
+.collapsibleList li > input + * {
+ display: none;
+}
+
+.collapsibleList li > input:checked + * {
+ display: block;
+}
+
+.collapsibleList li > input {
+ display: none;
+}
+
+.collapsibleList label {
+ cursor: pointer;
+}
+
