--- a/tethysapp/timeseries_viewer/public/css/main.css
+++ b/tethysapp/timeseries_viewer/public/css/main.css
@@ -120,11 +120,11 @@ margin:10px !important;
 
 
 .collapsibleList li > input + * {
- display: none;
+ display: block;
 }
 
 .collapsibleList li > input:checked + * {
- display: block;
+ display: none;
 }
 
 .collapsibleList li > input {
@@ -135,3 +135,15 @@ margin:10px !important;
  cursor: pointer;
 }
 
+#metadata_test1{
+    font-size:20px;
+}
+
+#stat_div{
+    max-height:100px;
+    width: 100%;
+    
+}
+#stats-table{
+    height:100px;
+}
