--- a/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
+++ b/tethysapp/timeseries_viewer/templates/timeseries_viewer/home.html
@@ -49,19 +49,36 @@ CUAHSI Time Series Viewer
 
 <div id="error-message"></div>
 <div id="ts-chart" class="highcharts-plot"></div>
+<div id = "stat_div" >
+    <table id="stats-table" style="width:100%">
 
-<table id="stats-table" style="width:100%">
-    <thead>
-  <tr>
-      <th>Site Name</th>
-      <th>Value Count</th>
-      <th>Mean</th>
-      <th>Median</th>
-      <th>Standard Deviation</th>
-  </tr>
-    </thead>
-    <tbody></tbody>
-</table>
+        <thead>
+      <tr>
+          <th>Legend</th>
+          <th>Site Name</th>
+          <th>Variable</th>
+          <th>Organization</th>
+          <th>Quality</th>
+          <th>Method</th>
+          <th>Data Type</th>
+          <th>Value Type</th>
+          <th>Sample Medium</th>
+          <th>Value Count</th>
+          <th>Mean</th>
+          <th>Median</th>
+          <th>Standard Deviation</th>
+      </tr>
+        </thead>
+        <tbody></tbody>
+
+    </table>
+</div>
+
+<br>
+
+
+
+
 
 
 
